--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,37 +1,36 @@
-name: Publish Python distributions to PyPI and TestPyPI
+name: Upload Python Package
 
 on:
-  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
-    python-build-n-publish:
-        name: Build and publish Python distribution
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@main
+  deploy:
+    runs-on: ubuntu-latest
 
-            - name: Initialize Python 3.9
-              uses: actions/setup-python@v1
-              with:
-                python-version: 3.9
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install flake8
-         
-            - name: Lint with flake8
-              run: |
-                # stop the build if there are Python syntax errors or undefined names
-                flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-                # exit-zero treats all errors as warnings.
-                flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-          
-            - name: Build binary wheel and a source tarball
-              run: python setup.py sdist
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-            - name: Publish distribution to PyPI
-              uses: pypa/gh-action-pypi-publish@master
-              with:
-                password: ${{ secrets.PYPI_PUBLISH_TOKEN }}
-                repository_url: https://upload.pypi.org/legacy/
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+
+      - name: Build package
+        run: python -m build
+
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
+          packages_dir: dist
+          verify_metadata: true
+          skip_existing: false
+          verbose: false
